[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "pegasus-wms"
version = "5.2.0"
description = "Pegasus Workflow Management System"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Pegasus Team", email = "pegasus@isi.edu" },
]
keywords = ["scientific workflows"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Java",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

dependencies = [
    # Core
    "PyYAML",
    "click>=8.0",
    # CLI / tools
    "GitPython",
    "pamela",
    "pika",
    # Web service / dashboard
    "werkzeug<3.1.0",
    "Flask>=2.2,<3.0",
    "Flask-Caching",
    "requests",
    # Database
    "sqlalchemy>=1.4",
    # Worker runtime (transfer, s3, globus — pegasus-worker merged into this wheel)
    "boto3>1.12",
    "globus-sdk>=3.23.0,<4",
]

[project.urls]
Documentation = "https://pegasus.isi.edu/documentation/"
Repository = "https://github.com/pegasus-isi/pegasus"
Issues = "https://github.com/pegasus-isi/pegasus/issues"
Changes = "https://pegasus.isi.edu/blog/?category_name=Release"

[project.scripts]
# Main unified entry point
pegasus = "Pegasus.cli.main:cli"

# Backward-compatible legacy entry points
pegasus-status         = "Pegasus.cli.main:pegasus_status"
pegasus-run            = "Pegasus.cli.main:pegasus_run"
pegasus-analyzer       = "Pegasus.cli.main:pegasus_analyzer"
pegasus-statistics     = "Pegasus.cli.main:pegasus_statistics"
pegasus-remove         = "Pegasus.cli.main:pegasus_remove"
pegasus-plan           = "Pegasus.cli.main:pegasus_plan"
pegasus-version        = "Pegasus.cli.main:pegasus_version"
pegasus-rc-client      = "Pegasus.cli.main:pegasus_rc_client"
pegasus-tc-converter   = "Pegasus.cli.main:pegasus_tc_converter"
pegasus-rc-converter   = "Pegasus.cli.main:pegasus_rc_converter"
pegasus-sc-converter   = "Pegasus.cli.main:pegasus_sc_converter"
pegasus-aws-batch      = "Pegasus.cli.main:pegasus_aws_batch"
pegasus-monitord       = "Pegasus.cli.main:pegasus_monitord"
pegasus-dagman         = "Pegasus.cli.main:pegasus_dagman"
pegasus-db-admin       = "Pegasus.cli.main:pegasus_db_admin"
pegasus-exitcode       = "Pegasus.cli.main:pegasus_exitcode"
pegasus-graphviz       = "Pegasus.cli.main:pegasus_graphviz"
pegasus-init           = "Pegasus.cli.main:pegasus_init"
pegasus-metadata       = "Pegasus.cli.main:pegasus_metadata"
pegasus-preflight-check = "Pegasus.cli.main:pegasus_preflight_check"
pegasus-service        = "Pegasus.cli.main:pegasus_service"
pegasus-submitdir      = "Pegasus.cli.main:pegasus_submitdir"
pegasus-cwl-converter  = "Pegasus.cli.main:pegasus_cwl_converter"
pegasus-em             = "Pegasus.cli.main:pegasus_em"
pegasus-config         = "Pegasus.cli.main:pegasus_config"
pegasus-transfer       = "Pegasus.cli.main:pegasus_transfer"
pegasus-s3             = "Pegasus.cli.main:pegasus_s3"
pegasus-integrity      = "Pegasus.cli.main:pegasus_integrity"
pegasus-checkpoint     = "Pegasus.cli.main:pegasus_checkpoint"
pegasus-globus-online  = "Pegasus.cli.main:pegasus_globus_online"
pegasus-globus-online-init = "Pegasus.cli.main:pegasus_globus_online_init"
pegasus-halt           = "Pegasus.cli.main:pegasus_halt"
pegasus-configure-glite = "Pegasus.cli.main:pegasus_configure_glite"

# C binaries (pegasus-kickstart, pegasus-cluster, pegasus-keg) are now
# installed directly to <venv>/bin/ by CMake via the wheel scripts section.
# No Python wrapper console_scripts entries are needed.

[project.optional-dependencies]
postgresql = ["psycopg2"]
mysql = ["pymysql"]
cwl = ["cwl-utils>=0.11", "jsonschema>=3.2"]

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"

# Python package location — pegasus-python is the main package; pegasus-common
# and pegasus-api are merged into the wheel via CMake install(DIRECTORY) below.
wheel.packages = ["packages/pegasus-python/src/Pegasus"]

# Source distribution: include everything cmake needs to build from source
sdist.include = [
    "CMakeLists.txt",
    "packages/pegasus-common/**",
    "packages/pegasus-api/**",
    "packages/pegasus-python/**",
    "packages/pegasus-kickstart/**",
    "packages/pegasus-cluster/**",
    "packages/pegasus-keg/**",
    "packages/pegasus-mpi-cluster/**",
    "share/pegasus/java/**",
    "build.properties",
    "release-tools/getsystem",
    "release-tools/getversion",
    "release-tools/determine-lib-dir",
    "src/edu/**",
    "src/org/**",
    "src/requirements.txt",
]
sdist.exclude = [
    "**/*.o",
    "**/*.so",
    "**/*.class",
    "build/",
    "dist/",
    "_cmake_build/",
]
